tests/NormalTests/paczka1/small_fuzzy/42437878.err
Error in line 10: OQMWrJT S364 40,2
Error in line 7: A907 S685 5,8
